--- a/scripts/update_hass.yaml
+++ b/scripts/update_hass.yaml
@@ -1,1 +1,6 @@
-bash /home/hass/.homeassistant/bin/update_hass.sh
+alias: "Update HA"
+sequence:
+  - condition: template
+    value_template: '{{ states.updater.updater.state == "0.37" }}'
+  - service: shell_command.update_hass
+  - service: homeassistant.restart
