Update syntax to fix: ERROR (MainThread) [homeassistant.config] Invalid config for [script]: expected a dictionary for dictionary value @ data['script']['alias']. Got 'Update HA'

--- a/scripts/update_hass.yaml
+++ b/scripts/update_hass.yaml
@@ -1,6 +1,7 @@
-alias: "Update HA"
-sequence:
-  - condition: template
-    value_template: '{{ states.updater.updater.state == "0.37" }}'
-  - service: shell_command.update_hass
-  - service: homeassistant.restart
+update_home_assistant:
+    alias: "Update Home Assistant"
+    sequence:
+      - condition: template
+        value_template: '{{ states.updater.updater.state == "0.37" }}'
+      - service: shell_command.update_hass
+      - service: homeassistant.restart
