--- a/configuration.yaml
+++ b/configuration.yaml
@@ -55,6 +55,8 @@ zone: !include_dir_list zones
 
 script: !include_dir_merge_named scripts
 
+shell_command: !include_dir_named shell_command
+
 sensor: !include_dir_merge_list sensors
 
 logger:
