--- a/configuration.yaml
+++ b/configuration.yaml
@@ -55,7 +55,7 @@ zone: !include_dir_list zones
 
 script: !include_dir_merge_named scripts
 
-shell_command: !include_dir_named shell_command
+shell_command: !include_dir_named shell_commands
 
 sensor: !include_dir_merge_list sensors
 
