Remove quotes from new_commits command_line sensor

--- a/sensors/new_commits.yaml
+++ b/sensors/new_commits.yaml
@@ -2,7 +2,7 @@
   name: "Check for new config"
   scan_interval: 60
   unit_of_measurement: commits
-  command: 'cd /home/hass/.homeassistant && git rev-list --count master..origin/master'
+  command: cd /home/hass/.homeassistant && git rev-list --count master..origin/master
   value_template: >
           {% if is_state('sensor.new_commits'> 0) %}
             Config file is out-of-date by {{ states('sensor.new_commits') }} commits
