--- a/groups/tab-home.yaml
+++ b/groups/tab-home.yaml
@@ -3,6 +3,7 @@ default_view:
   icon: mdi:home
   entities:
     - group.weather
+    - group.updates
     - group.family_info
     - group.travel_times
     - group.utilities
