--- a/automation/new_configuration_notification.yaml
+++ b/automation/new_configuration_notification.yaml
@@ -4,9 +4,9 @@
     entity_id: sensor.check_for_new_config
     above: 0
   action:
-    service: notify.notify
-    data:
-      message: 'New configuration is available'
-    service: notify.pushbullet
-    data:
-      message: 'New configuration is available'
+    - service: notify.notify
+      data:
+        message: 'New configuration is available'
+    - service: notify.pushbullet
+      data:
+        message: 'New configuration is available'
