--- a/sensors/latest_hass_release.yaml
+++ b/sensors/latest_hass_release.yaml
@@ -1,3 +1,4 @@
 - platform: command_line
   name: Latest Home Assistant release
+  scan_interval: 3600
   command: python3 -c "import requests; print(requests.get('https://pypi.python.org/pypi/homeassistant/json').json()['info']['version'])"
