Update notification target

--- a/automation/new_configuration_notification.yaml
+++ b/automation/new_configuration_notification.yaml
@@ -7,6 +7,6 @@
     - service: notify.notify
       data:
         message: 'New configuration is available'
-    - service: notify.pushbullet
+    - service: notify.jonathan
       data:
         message: 'New configuration is available'
