--- a/logger.yaml
+++ b/logger.yaml
@@ -2,7 +2,7 @@ default: info
 logs:
   homeassistant.core: warn
   homeassistant.components.automation: info
-  homeassistant.components.device_tracker: error
+  homeassistant.components.device_tracker: warn
   homeassistant.components.discovery: warn
   homeassistant.components.http: error
   homeassistant.components.media_player: warn
