Add owntracks device for jonathan

--- a/groups/global.yaml
+++ b/groups/global.yaml
@@ -8,6 +8,7 @@ jonathan:
   name: Jonathan
   entities:
     - device_tracker.gsmjonathanfritzbox
+    - device_tracker.jonathan_phone
 
 janneke:
   name: Janneke
