--- a/camera.yaml
+++ b/camera.yaml
@@ -1,3 +1,4 @@
 - platform: generic
+  name: jonathan
   still_image_url: https://maps.googleapis.com/maps/api/staticmap?center={{ states.device_tracker.jonathan_phone.attributes.latitude }},{{ states.device_tracker.jonathan_phone.attributes.longitude }}&zoom=13&size=500x500&maptype=roadmap&markers=color:blue%7Clabel:J%7C{{ states.device_tracker.jonathan_phone.attributes.latitude }},{{ states.device_tracker.jonathan_phone.attributes.longitude }}
   limit_refetch_to_url_change: true
