Oops, forgot to add the group to the view

--- a/groups/tab-home.yaml
+++ b/groups/tab-home.yaml
@@ -6,6 +6,7 @@ default_view:
     - group.family_info
     - group.travel_times
     - group.utilities
+    - group.locations
 
 family_info:
   name: Family Info
