Apparently material design calls it television (not tv as on material.io)

--- a/groups/tab-mediaplayer.yaml
+++ b/groups/tab-mediaplayer.yaml
@@ -1,7 +1,7 @@
 mediaplayers:
   name: Media
   view: yes
-  icon: mdi:tv
+  icon: mdi:television
   entities:
     - media_player.chromecast
     - media_player.smarttv
