--- a/configuration.yaml
+++ b/configuration.yaml
@@ -20,7 +20,7 @@ frontend:
 
 http:
   # Uncomment this to add a password (recommended!)
-  # api_password: PASSWORD
+  api_password: !secret api_pwd
 
 # Checks for available updates
 updater:
