--- a/shell_commands/update_new_commits_sensor.yaml
+++ b/shell_commands/update_new_commits_sensor.yaml
@@ -1,1 +1,1 @@
-bash /home/hass/.homeassistant/bin/update_new_commits_sensor.sh #TODO: feed password
+bash /home/e-smith/files/users/hass-user/.homeassistant/bin/update_new_commits_sensor.sh #TODO: feed password
