--- a/sensors/dsmr.yaml
+++ b/sensors/dsmr.yaml
@@ -1,4 +1,4 @@
-- name: dsmr
-  platform: dsmr
-  port: /dev/ttyAMA0
-  dsmr_version: 2.2
+#- name: dsmr
+#  platform: dsmr
+#  port: /dev/ttyAMA0
+#  dsmr_version: 2.2
