Make system uptime analogu to Home Assistant uptime and use /proc/uptime

--- a/sensors/system-uptime.yaml
+++ b/sensors/system-uptime.yaml
@@ -1,4 +1,38 @@
 - platform: command_line
   name: "System uptime"
-  command: uptime -p | sed -e 's/up\s*//g'
+  command: cat /proc/uptime | cut -d " " -f 1
   scan_interval: 60
+  value_template: >-
+    {% set uptime = value | int %}
+    {% set seconds = uptime % 60 %}
+    {% set minutes = ((uptime % 3600) / 60) | int %}
+    {% set hours = ((uptime % 86400) / 3600) | int %}
+    {% set days = (uptime / 86400) | int %}
+
+    {%- if days > 0 -%}
+      {%- if days == 1 -%}
+        1 day
+      {%- else -%}
+        {{ days }} days
+      {%- endif -%}
+    {%- endif -%}
+    {%- if hours > 0 -%}
+      {%- if days > 0 -%}
+        {{ ', ' }}
+      {%- endif -%}
+      {%- if hours == 1 -%}
+        1 hour
+      {%- else -%}
+        {{ hours }} hours
+      {%- endif -%}
+    {%- endif -%}
+    {%- if minutes > 0 -%}
+      {%- if days > 0 or hours > 0 -%}
+        {{ ', ' }}
+      {%- endif -%}
+      {%- if minutes == 1 -%}
+        1 minute
+      {%- else -%}
+        {{ minutes }} minutes
+      {%- endif -%}
+    {%- endif -%}
