Try and grep secrets

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
   - "3.7"
 before_install:
-  - for f in `grep -irh secret *.yaml | sed 's/^.*secret\s//g' | sort -u`; do echo "$f: \"*** GENERATED DUMMY SECRET ***\"" >> secrets.yaml; done
+  - grep -irh secret *.yaml
   - sudo apt-get install -y libudev-dev
 install:
   - pip3 install homeassistant
