--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,9 @@ language: python
 python:
   - "3.7"
 before_install:
-  - grep -irh secret *.yaml
   - sudo apt-get install -y libudev-dev
+  - sudo apt-get install -y grep
+  - grep -irh secret *.yaml
 install:
   - pip3 install homeassistant
 script:
