--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
 before_install:
   - sudo apt-get install -y libudev-dev
   - ls -la
+  - grep secret *.yaml`
 install:
   - pip3 install homeassistant
 script:
