--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 before_install:
   - sudo apt-get install -y libudev-dev
   - ls -la
-  - grep -r secret *.yaml
+  - grep ph
 install:
   - pip3 install homeassistant
 script:
