--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - "3.7"
 before_install:
   - sudo apt-get install -y libudev-dev
-  - grep -h
+  - grep --help
 install:
   - pip3 install homeassistant
 script:
